--- a/style.css
+++ b/style.css
@@ -1,20 +1,1 @@
-body {
-    margin: 0;
-    padding: 0;
-    text-align: center;
-}
-.background
-{
-    width: 100%;
-    height: 100%;
-    background-image:url(COVER.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-h1 {
-    padding-top: 4em;
-}
-p {
-    margin: 2em 0;
-}
+ABOUT
