--- a/style.css
+++ b/style.css
@@ -1,1 +1,41 @@
+<style class="css">
 
+  .navbar{
+    backgroun: crimson; font-family: cailibri; padding-right: 15px;padding-left: 15px;
+  }
+  .navdiv{
+    display: flex; align-items: center; justify-content: space-between;
+  }
+
+    .logo a{
+        font-size: 35px; font-weight: 600; color: black;
+    }
+  li{
+    list-style: none; display: inline-block;
+  }
+  li a{
+    color: black; font-size: 18px; font-weight: bold; margin-right: 25px;
+  }
+  button{
+    background-color: white; margin-left: 10px; border-radius: 10px; padding: 10px; width: 90px;
+  }
+
+button a{
+      color: black; font-weight: bold; font-size: 15px;
+}
+  
+
+body {
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+h1 {
+    padding-top: 4em;
+}
+p {
+    margin: 2em 0;
+}
+
+</style>
